--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
     <title>Odin - Tic Tac Toe</title>
 </head>
 <body>
@@ -14,22 +13,25 @@
         </div>
         <div class="content-container">
             <div class="board">
-                <div>X</div>
-                <div></div>
-                <div></div>
-                <div>O</div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div data-location="1-1"></div>
+                <div data-location="1-2"></div>
+                <div data-location="1-3"></div>
+                <div data-location="2-1"></div>
+                <div data-location="2-2"></div>
+                <div data-location="2-3"></div>
+                <div data-location="3-1"></div>
+                <div data-location="3-2"></div>
+                <div data-location="3-3"></div>
             </div>
             <div class="controls">
-                <button class="btn-primary" id="btn-x">X</button>
-                <button class="btn-primary" id="btn-o">O</button>
+                <input type="radio" name="choice" id="X">
+                <label for="X" class="btn btn-primary" data-choice="x">X</label>
+                <input type="radio" name="choice" id="O">
+                <label for="O" class="btn btn-primary" data-choice="o">O</label>
             </div>
         </div>
         <footer>Made by <a href="https://github.com/i5x64BIT">i5x64BIT</a> © All Rights Reserved</footer>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
