Add restart button, Change choice refference
Now instead of refferencing the label object, btnActive and the newly added btnInactive both refference the input itself.
This is a starting point for automatic player switching

--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
                 <div data-location="2-2"></div>
             </div>
             <div class="controls">
-                <input type="radio" name="choice" id="X">
-                <label for="X" class="btn btn-primary" data-choice="x">X</label>
-                <input type="radio" name="choice" id="O">
-                <label for="O" class="btn btn-primary" data-choice="o">O</label>
+                <input type="radio" id="x" name="choice" data-choice="x">
+                <label for="x" class="btn btn-primary">X</label>
+                <input type="radio" id="o" name="choice" data-choice="o">
+                <label for="o" class="btn btn-primary">O</label>
+            </div>
+            <div class="controls-game">
+                <button class="btn btn-secondary" id="restart">Restart Game</button>
             </div>
         </div>
         <footer>Made by <a href="https://github.com/i5x64BIT">i5x64BIT</a> © All Rights Reserved</footer>
