Add automatic input switch, Add isOver timeout
The initial ``checked`` value is necessary for the switch to work propperly.
isOver timeout allows for the board to draw the selection first, and only then announce the winner.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div data-location="2-2"></div>
             </div>
             <div class="controls">
-                <input type="radio" id="x" name="choice" data-choice="x">
+                <input type="radio" id="x" name="choice" data-choice="x" checked>
                 <label for="x" class="btn btn-primary">X</label>
                 <input type="radio" id="o" name="choice" data-choice="o">
                 <label for="o" class="btn btn-primary">O</label>
